tests/testfiles/passing/invalid_identifiers/start_with_number_1.c
int main() {
    int 1invalid;
}